# AnimeFLV-Downloader

./: .env.example  .gitignore  README.md  downloader.py  init.py  pyproject.toml  regex.py  scraper.py  tasks.ps1
